--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@
 }
 
 .root-container {
-  @apply flex-1 overflow-auto  lg:mt-0 lg:max-h-screen;
+  @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10;
 }
 
 /* ========================================== TAILWIND STYLES */
